Fix background, font color (for readability), etc

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,13 @@
+body {
+	background-image: url(http://p1.pichost.me/i/41/1647781.jpg);
+	background-position: center top;
+	background-size: 100% auto;
+	background-repeat: no-repeat;
+}
+
+.form, a {
+	color: white;
+}
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
